[fix] chat [#102]